--- a/view/index.html
+++ b/view/index.html
@@ -1,1 +1,17 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <title>view</title>
+  </head>
+  <body>
+    <div id="content"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+      axios.get('./content.md')
+        .then(response => document.querySelector('#content').innerHTML = marked(response.data));
+    </script>
+  </body>
+</html>
